Added SSM Document language server code. Added ssm-yaml and ssm-json … (#1186)
This PR adds AWS Systems Manager Document language support features to AWS Toolkit. The support features include syntax highlighting, auto-complete, and validation, all of which will be activated on newly defined languages ssm-json and ssm-yaml, identified by files extension .ssm.{json,yaml,yml}.

The implementation of the language services are done in a separate aws-ssm-document-language-service npm package, which currently is still under review by ssm document team and hasn't been published.

### Other Things Included
1. Commands and telemetries of opening and creating document. The implementation will be included in later PRs.
2. Language syntaxes for newly defined langauges ssm-json and ssm-yaml, which are the same as JSON and YAML syntax.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "runtimeExecutable": "${execPath}",
             "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
             "env": {
-                "AWS_TOOLKIT_IGNORE_WEBPACK_BUNDLE": "true"
+                "AWS_TOOLKIT_IGNORE_WEBPACK_BUNDLE": "true",
+                "SSMDOCUMENT_LANGUAGESERVER_PORT": "6010"
             },
             "outFiles": ["${workspaceFolder}/dist/**/*.js"],
             "preLaunchTask": "npm: watch"
@@ -24,6 +25,14 @@
             "port": 6009,
             "restart": true,
             "outFiles": ["${workspaceRoot}/dist/src/stepFunctions/amazonStatesLanguage/server.js"]
+        },
+        {
+            "name": "Attach to SSM Document Language Server",
+            "type": "node",
+            "request": "attach",
+            "port": 6010,
+            "restart": true,
+            "outFiles": ["${workspaceRoot}/dist/src/ssmDocument/ssm/ssmServer.js"]
         },
         {
             "name": "Extension (webpack)",
@@ -88,6 +97,12 @@
             },
             "outFiles": ["${workspaceFolder}/dist/src/integrationTest/**/*.js"],
             "preLaunchTask": "npm: testCompile"
+        }
+    ],
+    "compounds": [
+        {
+            "name": "Extension + Attach to SSM Document Language Server",
+            "configurations": ["Extension", "Attach to SSM Document Language Server"]
         }
     ]
 }
