Copy Log Stream Name in command prompt, Save Current Log Stream is explicitly removed

--- a/package.json
+++ b/package.json
@@ -449,6 +449,14 @@
                 {
                     "command": "aws.showErrorDetails",
                     "when": "false"
+                },
+                {
+                    "command": "aws.copyLogStreamName",
+                    "when": "resourceScheme == awsCloudWatchLogs"
+                },
+                {
+                    "command": "aws.saveCurrentLogStreamContent",
+                    "when": "false"
                 }
             ],
             "editor/title": [
