Model Rider build system better for up-to-date checks to work (#1956)
* Model inputs and outputs for rdgen
* Model inputs and outputs for compiling C#
* Remove the need for mono
* Move obj/ and bin/ out so Gradle can clean them easier

--- a/build.gradle
+++ b/build.gradle
@@ -240,10 +240,8 @@ intellij {
 }
 
 prepareSandbox {
-    tasks.findByPath(":jetbrains-rider:buildReSharperPlugin")?.collect {
-        from(it, {
-            into("${intellij.pluginName}/dotnet")
-        })
+    tasks.findByPath(":jetbrains-rider:prepareSandbox")?.collect {
+        from(it)
     }
 }
 
