--- a/buildspec/linuxUiTests.yml
+++ b/buildspec/linuxUiTests.yml
@@ -21,7 +21,7 @@ phases:
 
     commands:
       - apt-get update
-      - apt-get install -y xvfb icewm procps ffmpeg libswt-gtk-3-java mono-complete
+      - apt-get install -y xvfb icewm procps ffmpeg libswt-gtk-3-java
       - mkdir -p /tmp/.aws
       - aws sts assume-role --role-arn $ASSUME_ROLE_ARN --role-session-name ui-test > /tmp/.aws/creds.json
       - export KEY_ID=`jq -r '.Credentials.AccessKeyId' /tmp/.aws/creds.json`
