--- a/jetbrains-rider/build.gradle
+++ b/jetbrains-rider/build.gradle
@@ -5,7 +5,7 @@ import org.jetbrains.intellij.tasks.PrepareSandboxTask
 buildscript {
     ext.rd_version = rdGenVersion()
 
-    println("Using rd-gen: $rd_version")
+    logger.info("Using rd-gen: $rd_version")
 
     repositories {
         maven { url 'https://www.myget.org/F/rd-snapshots/maven/' }
@@ -18,14 +18,9 @@ buildscript {
 }
 
 ext.resharperPluginPath = new File(projectDir, "ReSharper.AWS")
+ext.resharperBuildPath = new File(project.buildDir, "dotnetBuild")
 
-try {
-    InetAddress.getByName("repo.labs.intellij.net")
-    ext.localEnv = false
-} catch (UnknownHostException ignored) {
-    println("Not running in JetBrains' network")
-    ext.localEnv = true
-}
+def buildConfiguration = ext.properties["BuildConfiguration"] ?: "Debug" // TODO: Do we ever want to make a release build?
 
 apply plugin: 'org.jetbrains.intellij'
 apply plugin: 'com.jetbrains.rdgen'
@@ -36,6 +31,12 @@ apply from: 'backend.gradle'
 dependencies {
     compile project(":jetbrains-core")
     testImplementation project(path: ":jetbrains-core", configuration: 'testArtifacts')
+}
+
+ext.riderGeneratedSources = "$buildDir/generated-src"
+
+sourceSets {
+    main.java.srcDir riderGeneratedSources
 }
 
 intellij {
@@ -54,6 +55,14 @@ intellij {
     instrumentCode = false
 }
 
+def resharperParts = [
+    "AWS.Daemon",
+    "AWS.Localization",
+    "AWS.Project",
+    "AWS.Psi",
+    "AWS.Settings"
+]
+
 // Tasks:
 //
 // `buildPlugin` depends on `prepareSandbox` task and then zips up the sandbox dir and puts the file in rider/build/distributions
@@ -63,23 +72,25 @@ intellij {
 tasks.withType(PrepareSandboxTask).configureEach {
     dependsOn buildReSharperPlugin
 
-    from(buildReSharperPlugin.outputs, {
+    def files = resharperParts.collect {"$resharperBuildPath/bin/$it/$buildConfiguration/${it}.dll"} +
+        resharperParts.collect {"$resharperBuildPath/bin/$it/$buildConfiguration/${it}.pdb"}
+    from(files, {
         into("${intellij.pluginName}/dotnet")
     })
 }
 
-compileKotlin.dependsOn(generateModel)
+compileKotlin.dependsOn(generateModels)
 
 test {
     systemProperty("log.dir", "${project.intellij.sandboxDirectory}-test/logs")
     useTestNG()
-    environment("LOCAL_ENV_RUN", localEnv)
+    environment("LOCAL_ENV_RUN", true)
     maxHeapSize("1024m")
 }
 
 tasks.integrationTest {
     useTestNG()
-    environment("LOCAL_ENV_RUN", localEnv)
+    environment("LOCAL_ENV_RUN", true)
 }
 
 jar {
