--- a/buildspec/linuxTests.yml
+++ b/buildspec/linuxTests.yml
@@ -10,6 +10,7 @@ phases:
 
     build:
         commands:
+            - export AWS_TOOLKIT_TEST_USER_DIR=/tmp/
             - export AWS_TOOLKIT_TEST_NO_COLOR=1
             - npm run testCompile
             - npm run lint
