--- a/buildspec/packageTestVsix.yml
+++ b/buildspec/packageTestVsix.yml
@@ -17,6 +17,7 @@ phases:
 
     build:
         commands:
+            - export AWS_TOOLKIT_TEST_USER_DIR=/tmp/
             - npm run generateNonCodeFiles
             - cp ./extension-readme.md ./README.md
             - npm run package
