SQS: Added Polled Messages Pane (#1950)
* implemented poll message form

* cell rendering, message truncating, tests added

* added exceptions

* UI bug fix

* small fixes

* localization file fix

* pr comments pt 1

* Uiutil changes

* PR changes 2

* Added new abstract class for column rendering

* Added extra set up for poll messages pane

* Pane test edited

* New RuleUtils.randomname and warning page

* PR changes 3

* RuleUtils fix

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -699,7 +699,16 @@ settings.states.invalid.short=Unable to connect
 settings.states.validating=Validating connection to AWS...
 settings.states.validating.short=Validating connection
 settings.title=AWS Connection Settings
+sqs.failed_to_load_total=Failed to load number of messages available
+sqs.failed_to_poll_messages=Failed to poll messages
+sqs.message.message_body=Message Body
+sqs.message.message_id=Message ID
+sqs.message.no_messages=No messages polled
+sqs.message.sender_id=Sender ID
+sqs.message.timestamp=Sent Timestamp
+sqs.messages.available.text=Messages Available: 
 sqs.poll.message=Poll for Messages
+sqs.poll.warning.text=<html><b>To view messages in the queue, poll for messages.</b><p>Once polled, the sample of messages remain in the queue and are not returned to subsequent receive requests for the duration of the visibility timeout.</p></html>
 sqs.queue.polled.messages=Polled Messages
 sqs.send.message=Send a Message
 sqs.toolwindow=SQS
