CI/windows: install getmac.exe (Python package)
This doesn't actually fix anything, but it avoids this spurious error in
the logs:

    Starting tests: C:\codebuild\tmp\output\src871601087\src\github.com\aws\aws-toolkit-vscode\dist\src\test\index.js
    [main 2020-07-30T02:02:55.348Z] [uncaught exception in main]: Unable to retrieve mac address
    (Error: Command failed: getmac.exe 'getmac.exe' is not recognized as an internal or external command, operable program or batch file.)

ref https://github.com/microsoft/vscode/issues/102428
ref https://github.com/microsoft/vscode-remote-release/issues/2719

--- a/buildspec/windowsTests.yml
+++ b/buildspec/windowsTests.yml
@@ -9,6 +9,13 @@ phases:
                 if(-Not($Env:CODE_COV_TOKEN -eq $null)) {
                     choco install -y --no-progress codecov
                 }
+            # Install getmac to avoid spurious "Command failed: getmac.exe"
+            # error in the build logs. https://github.com/microsoft/vscode/issues/102428
+            - |
+                &python --version
+                &pip --version
+                &pip install getmac
+                &getmac --version
     pre_build:
         commands:
             - npm install
