CloudWatch Logs Insights: Query Editor Form (#1948)
* Query Editor opens, StartQuery executed

* Query Editor opens, StartQuery executed

* Query Editor opens, StartQuery executed

* Gets query-id

* Query executed, query-id obtained

* Query executed, query-id obtained

* Query executed, query-id obtained

* Query Editor Relative time updated

* Log Group Type updated

* Start and end date converted to single object

* Start and end date converted to single object

* Changed message components, test names

* Tests updated

--- a/jetbrains-core/resources/META-INF/plugin.xml
+++ b/jetbrains-core/resources/META-INF/plugin.xml
@@ -306,6 +306,9 @@
             <action id="cloudwatch.logs.open"
                     class="software.aws.toolkits.jetbrains.services.cloudwatch.logs.actions.OpenLogGroupAction"/>
             <separator/>
+            <action id="cloudwatch.logs.query.group"
+                    class="software.aws.toolkits.jetbrains.services.cloudwatch.logs.insights.actions.QueryGroupAction"/>
+            <separator/>
             <action id="cloudwatch.logs.delete.group"
                     class="software.aws.toolkits.jetbrains.services.cloudwatch.logs.actions.DeleteGroupAction"/>
         </group>
