--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -191,6 +191,7 @@ cloudformation.update_stack.timeout=Failed to update stack {0} in {1} seconds. V
 cloudformation.yaml.invalid_root_type=Template does not start with a mapping: {0}
 cloudformation.yaml.too_many_documents=There should only be 1 YAML document per file: {0}
 cloudformation.yaml.too_many_files=Found {0} YAML files but only expected 1
+cloudwatch.logs.compare.start.end.date=Start date must be before end date
 cloudwatch.logs.copy_action=Copy {0, choice, 1#message|2#messages}
 cloudwatch.logs.delete_log_group=Delete Log Group
 cloudwatch.logs.download=Download Log Stream
@@ -207,23 +208,38 @@ cloudwatch.logs.log_group_title=Group: {0}
 cloudwatch.logs.log_stream_does_not_exist=Log stream {0} does not exist
 cloudwatch.logs.log_stream_title=Stream: {0}
 cloudwatch.logs.log_streams=Log Streams
+cloudwatch.logs.no_end_date=End Date must be specified
 cloudwatch.logs.no_events=No Events in Log Stream
 cloudwatch.logs.no_events_query=No Events matching the query found in Log Stream {0}
 cloudwatch.logs.no_log_streams=No Log Stream found
+cloudwatch.logs.no_query_entered=Query must be specified
+cloudwatch.logs.no_query_selected=Either a query or search term must be entered
+cloudwatch.logs.no_relative_time_number=Number must be specified
+cloudwatch.logs.no_start_date=Start Date must be specified
+cloudwatch.logs.no_term_entered=Search Term must be specified
 cloudwatch.logs.open=View Log Streams
 cloudwatch.logs.open_in_editor=Open in Editor
 cloudwatch.logs.open_in_editor_failed=Open in editor failed
 cloudwatch.logs.opening_in_editor=Opening Stream {0} in editor
+cloudwatch.logs.query=Open Query Editor
+cloudwatch.logs.query.form.ok_Button=Apply
+cloudwatch.logs.query_editor_title=Query Log Groups
 cloudwatch.logs.save_action=Save to a File
 cloudwatch.logs.saving_to_disk=Saving Stream {0} to disk
 cloudwatch.logs.saving_to_disk_failed=Saving Stream {0} failed
 cloudwatch.logs.saving_to_disk_succeeded=Finished saving Log Stream {0} to {1}
+cloudwatch.logs.selected_log_groups=Log Groups Selected
 cloudwatch.logs.show_logs_around=Show Logs Around
 cloudwatch.logs.stream_save_to_file=Save {0} to a file
 cloudwatch.logs.stream_too_big=Stream is Too Large
 cloudwatch.logs.stream_too_big_message=Log stream {0} is too large to open in the editor
 cloudwatch.logs.tail=Tail logs
+cloudwatch.logs.time_days=Days
+cloudwatch.logs.time_hours=Hours
+cloudwatch.logs.time_minutes=Minutes
+cloudwatch.logs.time_weeks=Weeks
 cloudwatch.logs.toolwindow=CloudWatch Logs
+cloudwatch.logs.validation.timerange=Time Range not Selected
 cloudwatch.logs.view_log_stream=View Log Stream
 cloudwatch.logs.view_log_streams=View Log Streams
 cloudwatch.logs.wrap=Wrap logs
