--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "onView:aws.cdk.explorer",
         "onCommand:aws.refreshCdkExplorer",
         "onCommand:aws.aboutToolkit",
+        "onCommand:aws.cloudWatchLogs.viewLogStream",
         "onLanguage:asl",
         "onLanguage:javascript",
         "onLanguage:python",
