Moving Copy Log Stream out of toolbar and into editor tab's context menu

--- a/package.json
+++ b/package.json
@@ -515,14 +515,16 @@
                     "group": "navigation"
                 },
                 {
-                    "command": "aws.copyLogStreamName",
-                    "when": "resourceScheme == awsCloudWatchLogs",
-                    "group": "navigation"
-                },
-                {
                     "command": "aws.saveCurrentLogStreamContent",
                     "when": "resourceScheme == awsCloudWatchLogs",
                     "group": "navigation"
+                }
+            ],
+            "editor/title/context": [
+                {
+                    "command": "aws.copyLogStreamName",
+                    "when": "resourceScheme == awsCloudWatchLogs",
+                    "group": "1_cutcopypaste@1"
                 }
             ],
             "view/title": [
