--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -701,15 +701,30 @@ settings.states.validating.short=Validating connection
 settings.title=AWS Connection Settings
 sqs.failed_to_load_total=Failed to load number of messages available
 sqs.failed_to_poll_messages=Failed to poll messages
+sqs.failed_to_send_message=Failed to send message
+sqs.message.deduplication_id.tooltip=<html><p>Used for deduplication of sent messages. </p><p>If a message with a particular message deduplication ID is sent successfully, any messages sent with the same message deduplication ID are accepted successfully but aren't delivered during the 5-minute deduplication interval.</p></html>
+sqs.message.group_id.tooltip=<html><p>Specifies that a message belongs to a specific message group. </p><p>Messages that belong to the same message group are always processed in a strict order relative to the message group.</p></html>
 sqs.message.message_body=Message Body
 sqs.message.message_id=Message ID
 sqs.message.no_messages=No messages polled
 sqs.message.sender_id=Sender ID
 sqs.message.timestamp=Sent Timestamp
-sqs.messages.available.text=Messages Available: 
+sqs.message.validation.empty.deduplication_id=Please enter deduplication ID.
+sqs.message.validation.empty.group_id=Please enter group ID.
+sqs.message.validation.empty.message.body=Please enter message body.
+sqs.message.validation.long.id=ID exceeds the maximum length of 128 characters.
+sqs.messages.available.text=Messages Available:
 sqs.poll.message=Poll for Messages
 sqs.poll.warning.text=<html><b>To view messages in the queue, poll for messages.</b><p>Once polled, the sample of messages remain in the queue and are not returned to subsequent receive requests for the duration of the visibility timeout.</p></html>
 sqs.queue.polled.messages=Polled Messages
+sqs.required.empty.text=(Required)
 sqs.send.message=Send a Message
+sqs.send.message.body=Message Body:
+sqs.send.message.body.empty.text=Enter message body
+sqs.send.message.clear.button=Clear
+sqs.send.message.deduplication_id=Message Deduplication ID:
+sqs.send.message.group_id=Message Group ID:
+sqs.send.message.send.button=Send
+sqs.send.message.success=Sent message ID: {0}
 sqs.toolwindow=SQS
 sqs.url.parse_error=Error parsing queue URL
