CloudWatch Logs Insights : Save Query (#1968)
* SaveQuery

* Save Query updated

* Save Query, added successmessage

* Added tests for API,Save Query Error message updated

* SaveQueryTest

* SaveQueryTest

* Save Query

* Save Query API test updated

Co-authored-by: Hunter Werlla <werlla@amazon.com>

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -222,9 +222,15 @@ cloudwatch.logs.open_in_editor=Open in Editor
 cloudwatch.logs.open_in_editor_failed=Open in editor failed
 cloudwatch.logs.opening_in_editor=Opening Stream {0} in editor
 cloudwatch.logs.query=Open Query Editor
-cloudwatch.logs.query.form.ok_Button=Apply
+cloudwatch.logs.query.form.ok_Button=Execute
 cloudwatch.logs.query_editor_title=Query Log Groups
+cloudwatch.logs.query_name=Query name is missing
+cloudwatch.logs.query_not_saved=Query could not be saved. Try saving with a different name.
+cloudwatch.logs.query_saved_successfully=Query has been saved to your account!
 cloudwatch.logs.save_action=Save to a File
+cloudwatch.logs.save_query=Save Query
+cloudwatch.logs.save_query_dialog_name=Enter Query Name
+cloudwatch.logs.saved_query_status=Saved Query Status
 cloudwatch.logs.saving_to_disk=Saving Stream {0} to disk
 cloudwatch.logs.saving_to_disk_failed=Saving Stream {0} failed
 cloudwatch.logs.saving_to_disk_succeeded=Finished saving Log Stream {0} to {1}
