SQS: Add create queue action (#1972)
* Create action set up

* Added tooltip help

* Added tests

* FIFO fix

* PR changes, add .fifo for clients

* PR changes: .fifo logical fix

Co-authored-by: Hunter Werlla <werlla@amazon.com>

--- a/jetbrains-core/resources/META-INF/plugin.xml
+++ b/jetbrains-core/resources/META-INF/plugin.xml
@@ -345,6 +345,11 @@
                     class="software.aws.toolkits.jetbrains.services.schemas.code.DownloadCodeForSchemaAction"/>
         </group>
 
+        <group id="aws.toolkit.explorer.sqs" popup="true" compact="false">
+            <action id="sqs.create.queue"
+                    class="software.aws.toolkits.jetbrains.services.sqs.actions.CreateQueueAction"/>
+        </group>
+
         <group id="aws.toolkit.explorer.sqs.queue" popup="true" compact="false">
             <action id="sqs.poll.message"
                     class="software.aws.toolkits.jetbrains.services.sqs.actions.PollMessageAction"/>
