--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -699,9 +699,22 @@ settings.states.invalid.short=Unable to connect
 settings.states.validating=Validating connection to AWS...
 settings.states.validating.short=Validating connection
 settings.title=AWS Connection Settings
+sqs.create.fifo.label=FIFO
+sqs.create.queue.create=Create
+sqs.create.queue.failed=Failed to create queue {0}
+sqs.create.queue.in_progress=Creating...
+sqs.create.queue.name.label=Queue Name:
+sqs.create.queue.title=Create Queue
+sqs.create.queue.tooltip=It may take up to 60 seconds for the queue to be visible in the AWS Explorer.
+sqs.create.queue.type.label=Queue Type:
+sqs.create.standard.label=Standard
+sqs.create.validation.empty.queue.name=Queue name must be specified.
+sqs.create.validation.long.queue.name=Queue name must not exceed {0} characters in length.
+sqs.create.validation.queue.name.invalid=Queue names can only contain alphanumeric characters, hyphens (-), and underscores (_).
 sqs.failed_to_load_total=Failed to load number of messages available
 sqs.failed_to_poll_messages=Failed to poll messages
 sqs.failed_to_send_message=Failed to send message
+sqs.fifo.queue.tooltip=Supports first-in-first-out delivery and message ordering is preserved.
 sqs.message.deduplication_id.tooltip=<html><p>Used for deduplication of sent messages. </p><p>If a message with a particular message deduplication ID is sent successfully, any messages sent with the same message deduplication ID are accepted successfully but aren't delivered during the 5-minute deduplication interval.</p></html>
 sqs.message.group_id.tooltip=<html><p>Specifies that a message belongs to a specific message group. </p><p>Messages that belong to the same message group are always processed in a strict order relative to the message group.</p></html>
 sqs.message.message_body=Message Body
@@ -716,6 +729,7 @@ sqs.message.validation.long.id=ID exceeds the maximum length of 128 characters.
 sqs.messages.available.text=Messages Available:
 sqs.poll.message=Poll for Messages
 sqs.poll.warning.text=<html><b>To view messages in the queue, poll for messages.</b><p>Once polled, the sample of messages remain in the queue and are not returned to subsequent receive requests for the duration of the visibility timeout.</p></html>
+sqs.queue.name.tooltip=<html><p>A queue name is case-sensitive and can have up to 80 characters of alphanumeric characters, hyphens (-), and underscores ( _ ). </p><p>If FIFO is selected, '.fifo' will be appended to the specified name if it does not already exist.</p></html>
 sqs.queue.polled.messages=Polled Messages
 sqs.required.empty.text=(Required)
 sqs.send.message=Send a Message
@@ -726,5 +740,6 @@ sqs.send.message.deduplication_id=Message Deduplication ID:
 sqs.send.message.group_id=Message Group ID:
 sqs.send.message.send.button=Send
 sqs.send.message.success=Sent message ID: {0}
+sqs.standard.queue.tooltip=Supports at-least-once delivery and message ordering is not preserved.
 sqs.toolwindow=SQS
 sqs.url.parse_error=Error parsing queue URL
