SQS: Add delete queue action (#1974)
* Create action set up

* Added tooltip help

* Added tests

* FIFO fix

* Set up delete action

* Added tests for delete action

* Fix style

* Gradle telemetry version update

* PR nit change

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -237,6 +237,7 @@ codepipeline.resource.update.warning.message=<html>The {0} ''{1}'' is part of an
 codepipeline.resource.update.warning.no_text=No
 codepipeline.resource.update.warning.title=Warning!
 codepipeline.resource.update.warning.yes_text=Yes
+codepipeline.sqs.resource_type=AWS SQS queue
 codepipeline.stack.resource_type=AWS CloudFormation stack
 configure.toolkit=Configure AWS connection
 configure.toolkit.upsert_credentials.action=Edit AWS Credential file(s)
@@ -711,6 +712,7 @@ sqs.create.standard.label=Standard
 sqs.create.validation.empty.queue.name=Queue name must be specified.
 sqs.create.validation.long.queue.name=Queue name must not exceed {0} characters in length.
 sqs.create.validation.queue.name.invalid=Queue names can only contain alphanumeric characters, hyphens (-), and underscores (_).
+sqs.delete.queue.action=Delete Queue
 sqs.failed_to_load_total=Failed to load number of messages available
 sqs.failed_to_poll_messages=Failed to poll messages
 sqs.failed_to_send_message=Failed to send message
