--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -20,6 +20,7 @@ aws.settings.sam.location=SAM CLI executable:
 aws.settings.sam.show_all_gutter_icons=Show gutter icons for all potential AWS Lambda handlers
 aws.settings.sam.show_all_gutter_icons_tooltip=When enabled, show gutter icons in source files for all potential Lambda handlers, even if they are not defined in a template or remotely.
 aws.settings.serverless_label=Serverless settings
+aws.settings.show.label=Show AWS Settings
 aws.settings.telemetry.description=Help us improve our product! Allow us to collect basic usage data.
 aws.settings.telemetry.option=Send usage metrics to AWS
 aws.settings.telemetry.prompt.message=Usage metrics are collected by default. Click <a href="">here</a> to adjust this behavior.
