Add an option to get RDS/Redshift host and port from secretsmanager (#1971)
Add an option to pull host and port from the secret. In this case, whatever is in those boxes is ignored (there is not a way to hide them)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -278,6 +278,7 @@ credentials.sso.login.message=Login to AWS at {0}, code: {1}
 credentials.sso.login.open_browser=Open Browser
 credentials.sso.login.title=AWS SSO Login Required
 datagrip.auth.secrets_manager=SecretsManager Auth
+datagrip.secret_host=Use the url and port from the secret
 datagrip.secret_id=Secret Name/ARN:
 datagrip.secretsmanager.action=Connect with Secrets Manager... 
 datagrip.secretsmanager.action.confirm_continue=<html><p>{0}</p><br/><p>Continue setting up the database?</p></html>
@@ -288,7 +289,9 @@ datagrip.secretsmanager.validation.different_address=Secret {0} specifies a diff
 datagrip.secretsmanager.validation.different_engine=Secret {0} specifies a different database engine ''{1}''
 datagrip.secretsmanager.validation.exception=Exception thrown while validating secret
 datagrip.secretsmanager.validation.failed_to_get=Failed to retrieve secret {0}
+datagrip.secretsmanager.validation.no_host=Secret {0} does not have a field named ''host''
 datagrip.secretsmanager.validation.no_password=Secret {0} does not have a field named ''password''
+datagrip.secretsmanager.validation.no_port=Secret {0} does not have a field named ''port''
 datagrip.secretsmanager.validation.no_secret=No SecretsManager secret specified
 datagrip.secretsmanager.validation.no_username=Secret {0} does not have a field named ''username''
 datagrip.secretsmanager.validation.unkown_engine=Unknown database engine {0}
