Add support for java8.al2 (#1985)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -554,7 +554,7 @@ sam.build.failed=SAM build command failed
 sam.build.running=Running SAM build
 sam.build.succeeded=SAM build command succeeded
 sam.build.title=SAM build
-sam.executable.schema_support_version_wrong=<html>Installed SAM executable does not support templates that require Event Schema selection. Required minimum version {0}, but found {1}.</html>
+sam.executable.minimum_too_low_runtime=The runtime {0} requires a minimum SAM CLI version of {1}
 sam.init.description=AWS Serverless Application Model (AWS SAM) prescribes rules for expressing Serverless applications on AWS.
 sam.init.error.no.project.basepath=Unable to determine project basepath
 sam.init.error.no.solution.basepath=Unable to determine solution basepath
