--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
                 },
                 "aws.samcli.location": {
                     "type": "string",
+                    "scope": "machine",
                     "default": "",
                     "markdownDescription": "%AWS.configuration.description.samcli.location%"
                 },
