SQS: Add SNS subscription feature (#1990)
* SNS Subscription dialog setup

* Added tests

* UI fix

* PR changes, added new test for subscribe action

* Fix style

* PR nit changes

--- a/jetbrains-core/resources/META-INF/plugin.xml
+++ b/jetbrains-core/resources/META-INF/plugin.xml
@@ -348,6 +348,9 @@
             <action id="sqs.send.message"
                     class="software.aws.toolkits.jetbrains.services.sqs.actions.SendMessageAction"/>
             <separator/>
+            <action id="sqs.subscribe.sns"
+                    class="software.aws.toolkits.jetbrains.services.sqs.actions.SubscribeSnsAction"/>
+            <separator/>
             <action id="sqs.delete.queue"
                     class="software.aws.toolkits.jetbrains.services.sqs.actions.DeleteQueueAction"/>
         </group>
