--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -746,6 +746,16 @@ sqs.send.message.deduplication_id=Message Deduplication ID:
 sqs.send.message.group_id=Message Group ID:
 sqs.send.message.send.button=Send
 sqs.send.message.success=Sent message ID: {0}
+sqs.service_name=Amazon SQS
 sqs.standard.queue.tooltip=Supports at-least-once delivery and message ordering is not preserved.
+sqs.subscribe.sns=Subscribe to SNS topic
+sqs.subscribe.sns.failed=Failed to subscribe {0} to {0}
+sqs.subscribe.sns.in_progress=Subscribing...
+sqs.subscribe.sns.select=Select SNS topic
+sqs.subscribe.sns.select.tooltip=Messages from the selected topic are sent to the queue.
+sqs.subscribe.sns.subscribe=Subscribe
+sqs.subscribe.sns.success=Subscribed successfully to topic {0}.
+sqs.subscribe.sns.topic=SNS topic:
+sqs.subscribe.sns.validation.empty_topic=Topic must be specified.
 sqs.toolwindow=SQS
 sqs.url.parse_error=Error parsing queue URL
